--- a/index.html
+++ b/index.html
@@ -4,48 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Year Countdown</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        :root {
-            color-scheme: light;
-        }
         body {
-            font-family: 'Plus Jakarta Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            min-height: 100vh;
-            background: radial-gradient(circle at top, rgba(13, 110, 253, 0.12), transparent 55%),
-                        radial-gradient(circle at bottom, rgba(32, 201, 151, 0.12), transparent 45%),
-                        var(--bs-body-bg);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 2rem 1rem;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f6f9fc;
+            padding-top: 50px;
         }
-        .countdown-card {
-            backdrop-filter: blur(8px);
-            background: rgba(255, 255, 255, 0.9);
+        h1 {
+            color: #2c3e50;
         }
-        .stat-tile {
-            border-radius: 1rem;
-            background-color: rgba(13, 110, 253, 0.08);
-            color: #0d6efd;
-            font-weight: 600;
-            padding: 1.5rem;
-        }
-        .stat-tile:nth-child(2) {
-            background-color: rgba(32, 201, 151, 0.12);
-            color: #198754;
-        }
-        .stat-tile:nth-child(3) {
-            background-color: rgba(111, 66, 193, 0.12);
-            color: #6f42c1;
-        }
-        @media (max-width: 576px) {
-            body {
-                padding: 1.5rem 1rem;
-            }
+        #countdown {
+            font-size: 2em;
+            margin-top: 20px;
+            color: #e74c3c;
         }
     </style>
 </head>
@@ -228,21 +200,6 @@
                 current.setHours(0, 0, 0, 0);
             }
             return count;
-        }
-
-        function updateNextHolidayMessage(referenceDate) {
-            const displayEl = document.getElementById('next-holiday');
-            const nextHoliday = getNextHoliday(referenceDate);
-            if (nextHoliday) {
-                const holLen = countHolidayWeekdays(nextHoliday);
-                const startDateObj = toDate(nextHoliday.start);
-                const options = { year: 'numeric', month: 'short', day: 'numeric' };
-                const startStr = startDateObj.toLocaleDateString(undefined, options);
-                displayEl.textContent =
-                    nextHoliday.name + ' (' + holLen + ' school day' + (holLen === 1 ? '' : 's') + ') starting ' + startStr;
-            } else {
-                displayEl.textContent = 'No more holidays before the end of term.';
-            }
         }
 
         // Update the displayed number of school days remaining
